Add LibEcto.Exception module and update error handling in LibEctoV2
Update version to 0.3.8 in mix.exs

Update Credo to version 1.7.5 in mix.lock

Remove @columns attribute from LibEctoV2 and LibEctoV2Test

--- a/lib/v2.md
+++ b/lib/v2.md
@@ -31,7 +31,6 @@ V2 is a complete rewrite of LibEcto, it's much more powerful and flexible. It si
 
     @repo Repo
     @schema Test.Schema
-    @columns [:id, :name, :value]
     @filters [:id, :name]
 
     def filter(:id, dynamic, %{"id" => value}) when is_binary(value),
@@ -68,7 +67,7 @@ iex> Sample.DB.get_one(%{"name" => "not-exists"})
 {:ok, nil}
 
 iex> Sample.DB.get_one!(%{"name" => "not-exists"})
-{:error, 404}
+** LibEcto.Exception (** (Exception) not found: [{"name", "not-exists"}]
 
 iex> {:ok, m} = Sample.DB.get_one(%{"name" => "test"})
 iex> Sample.DB.update_one(m, name: "test2")
